// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Pagination component correctly 1`] = `
<div>
  <ul
    className="css-vzr81x e1hkimla0"
  >
    <li>
      <a
        active={true}
        className="css-6ns6bf e1hkimla1"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          1
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with both next page link and previous page link correctly 1`] = `
<div>
  <ul
    className="css-vzr81x e1hkimla0"
  >
    <li>
      <a
        className="css-1n1qtvg e1hkimla1"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        ←
      </a>
    </li>
    <li>
      <a
        active={false}
        className="css-1n1qtvg e1hkimla1"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          1
        </span>
      </a>
    </li>
    <li>
      <a
        active={true}
        className="css-6ns6bf e1hkimla1"
        href="/articles/page/2"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          2
        </span>
      </a>
    </li>
    <li>
      <a
        active={false}
        className="css-1n1qtvg e1hkimla1"
        href="/articles/page/3"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          3
        </span>
      </a>
    </li>
    <li>
      <a
        className="css-1n1qtvg e1hkimla1"
        href="/articles/page/3"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        →
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with previous page link correctly 1`] = `
<div>
  <ul
    className="css-vzr81x e1hkimla0"
  >
    <li>
      <a
        className="css-1n1qtvg e1hkimla1"
        href="/articles/page/2"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        ←
      </a>
    </li>
    <li>
      <a
        active={false}
        className="css-1n1qtvg e1hkimla1"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          1
        </span>
      </a>
    </li>
    <li>
      <a
        active={false}
        className="css-1n1qtvg e1hkimla1"
        href="/articles/page/2"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          2
        </span>
      </a>
    </li>
    <li>
      <a
        active={true}
        className="css-6ns6bf e1hkimla1"
        href="/articles/page/3"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          3
        </span>
      </a>
    </li>
  </ul>
</div>
`;
